# Simple-XSS

./: .env.sample  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.py  linux_requirements.txt  logging.ini  main.py  options.toml  pyproject.toml  reqs.txt  requirements.txt  settings.py  settings.toml  windows_requirements.txt
app/: app.py  environment.py  exceptions.py  hook.py  io.py  options.py  payload.py  runner.py  server.py  session.py  settings.py  tunneling.py  validators.py
app/cli/: cli.py  io.py  menu.py
app/gui/: constants.py  gui.py  io.py  main.py
app/utils/: clss.py  exceptions.py  imputils.py  observer.py  settings.py  url.py
docs/: CHANGELOG.md  GUIDE.md  HOOKS.md  PAYLOADS.md  PLUGINS.md  README.md  TODO.md  VOCABULARY.md
hooks/default/: package.toml
payload/: __init__.py
payloads/chat/: init.py  package.toml  payload.js
payloads/hello_world/: init.py  package.toml
payloads/ip/: package.toml
payloads/login/: package.toml  payload.js
payloads/test/: init.py
requirements/: linux.txt  windows.txt
scripts/: create_hook.py  create_payload.py
simplexss/: __init__.py  __main__.py
simplexss/api/: __init__.py  di.py  events.py  hooks.py  io.py  payloads.py  plugins.py  transports.py
simplexss/core/: arguments.py  channels.py  config.py  containers.py  core.py  events.py  hooks.py  logging.py  payloads.py  plugins.py  settings.py  types.py  utils.py
src/: __init__.py  app.py  config.py  configurator.py  dependencies.py  di.py  enums.py  events.py
src/api/: __init__.py  dependencies.py  events.py  hooks.py  payloads.py  plugins.py
src/arguments/: __init__.py  arguments.py  dependencies.py  events.py  schemas.py  schemes.py  services.py
src/core/: __init__.py  app.py  config.py  core.py  dependencies.py  di.py  enums.py  events.py  launchers.py
src/hook/: __init__.py  hooks.py  loaders.py  schemas.py
tests/: test.html  test_arguments.py  test_injector.py  test_payload.py
(+481 files in other folders)
