[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]

[tool.poetry]
name = "simple-xss"
version = "0.0.3"
description = "Simple-XSS is a multi-platform cross-site scripting (XSS) vulnerability exploitation tool for pentesting."
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "simplexss" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
translatable-enums = "^0.0.3"
pytest = "^8.1.1"
toml = "^0.10.2"
pyngrok = "^7.1.5"
flet = "^0.21.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"
pytest = "^8.1.1"
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
